Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.h
@@ -52,7 +52,7 @@ public:
     void load(const String&) override;
     void load(const String&, MediaSourcePrivateClient*) override;
 
-    void setDownloadBuffering() override { };
+    void updateDownloadBufferingFlag() override { };
 
     bool isLiveStream() const override { return false; }
     MediaTime currentMediaTime() const override;
